Replace Java 9 collection factories with Java 8 equivalents