@@ -1,5 +1,5 @@
 /***************************************************************************
- *                   (C) Copyright 2018-2021 - Stendhal                    *
+ *                (C) Copyright 2018-2026 - PolanieOnLine                  *
  ***************************************************************************
  ***************************************************************************
  *                                                                         *
@@ -13,6 +13,8 @@ package games.stendhal.server.maps.quests;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -61,73 +63,55 @@ public class ProsbyWiedzmy extends AbstractQuest {
 	}
 
 	private void step1() {
-		npc.add(ConversationStates.ATTENDING,
-				ConversationPhrases.QUEST_MESSAGES,
-				new QuestCompletedCondition(QUEST_SLOT),
-				ConversationStates.ATTENDING, null,
+		npc.add(ConversationStates.ATTENDING, ConversationPhrases.QUEST_MESSAGES,
+				new QuestCompletedCondition(QUEST_SLOT), ConversationStates.ATTENDING, null,
 				(player, sentence, raiser) -> {
 					raiser.say("Już " + player.getGenderVerb("wypełniłeś") + " moje zadanie. Idź w pokoju.");
 				});
 
-		npc.add(ConversationStates.ATTENDING,
-				ConversationPhrases.QUEST_MESSAGES,
-				new QuestNotStartedCondition(QUEST_SLOT),
-				ConversationStates.QUEST_OFFERED,
+		npc.add(ConversationStates.ATTENDING, ConversationPhrases.QUEST_MESSAGES,
+				new QuestNotStartedCondition(QUEST_SLOT), ConversationStates.QUEST_OFFERED,
 				"W mej chacie, wśród pradawnych ksiąg, odkryłam sekret kontroli smoków. Jednakże potrzebuję twojej pomocy."
-					+ " W okolicy krąży błękitny smok. Czy wesprzesz mnie w walce z nim?",
+						+ " W okolicy krąży błękitny smok. Czy wesprzesz mnie w walce z nim?",
 				null);
 
-		Map<String, Pair<Integer, Integer>> toKill = Map.of("błękitny smok", new Pair<>(1, 0));
-		List<ChatAction> actions = List.of(
-			new IncreaseKarmaAction(5),
-			new SetQuestAction(QUEST_SLOT, 0, "start"),
-			new StartRecordingKillsAction(QUEST_SLOT, 1, toKill)
-		);
+		Map<String, Pair<Integer, Integer>> toKill = Collections.singletonMap("błękitny smok", new Pair<>(1, 0));
+		List<ChatAction> actions = Arrays.asList(new IncreaseKarmaAction(5), new SetQuestAction(QUEST_SLOT, 0, "start"),
+				new StartRecordingKillsAction(QUEST_SLOT, 1, toKill));
 
-		npc.add(ConversationStates.QUEST_OFFERED,
-				ConversationPhrases.YES_MESSAGES, null,
-				ConversationStates.ATTENDING,
+		npc.add(ConversationStates.QUEST_OFFERED, ConversationPhrases.YES_MESSAGES, null, ConversationStates.ATTENDING,
 				"Smok ów, jak mówiłam, nawiedza me ziemie. Jeśli go zgładzisz, przynieś mi jego skórę na dowód twej odwagi.",
 				new MultipleActions(actions));
 
-		npc.add(ConversationStates.QUEST_OFFERED,
-				ConversationPhrases.NO_MESSAGES, null, ConversationStates.IDLE,
+		npc.add(ConversationStates.QUEST_OFFERED, ConversationPhrases.NO_MESSAGES, null, ConversationStates.IDLE,
 				"Niech inny śmiałek podejmie to wyzwanie. Nie będę cię zatrzymywać.",
 				new SetQuestAndModifyKarmaAction(QUEST_SLOT, "rejected", -10));
 	}
 
 	private void step2() {
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "start"),
-					new NotCondition(new KilledForQuestCondition(QUEST_SLOT, 1))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Czyżbyś " + player.getGenderVerb("lękał") + " się zmierzyć z błękitnym smokiem? Nie zawiedź mnie.");
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "start"),
+						new NotCondition(new KilledForQuestCondition(QUEST_SLOT, 1))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say("Czyżbyś " + player.getGenderVerb("lękał")
+							+ " się zmierzyć z błękitnym smokiem? Nie zawiedź mnie.");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "start"),
-					new KilledForQuestCondition(QUEST_SLOT, 1),
-					new NotCondition(new PlayerHasItemWithHimCondition("skóra niebieskiego smoka", 1))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "start"),
+						new KilledForQuestCondition(QUEST_SLOT, 1),
+						new NotCondition(new PlayerHasItemWithHimCondition("skóra niebieskiego smoka", 1))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
 					raiser.say("Przynieś mi dowód swego zwycięstwa, abym mogła uwierzyć w twe czyny.");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "start"),
-					new KilledForQuestCondition(QUEST_SLOT, 1),
-					new PlayerHasItemWithHimCondition("skóra niebieskiego smoka", 1)
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "start"),
+						new KilledForQuestCondition(QUEST_SLOT, 1),
+						new PlayerHasItemWithHimCondition("skóra niebieskiego smoka", 1)),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
 					raiser.say("Twoja odwaga mnie nie zawiodła. Wróć za godzinę, a przygotuję kolejne zadanie.");
-					giveRewards(player, Map.of("skóra niebieskiego smoka", 1), 5000, 10);
+					giveRewards(player, Collections.singletonMap("skóra niebieskiego smoka", 1), 5000, 10);
 					player.setQuest(QUEST_SLOT, "czas_składniki;" + System.currentTimeMillis());
 				});
 	}
@@ -138,67 +122,53 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		questTrigger.add(extraTrigger);
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_składniki"),
-					new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))
-				),
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_składniki"),
+						new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))),
 				ConversationStates.ATTENDING, null,
 				new SayTimeRemainingAction(QUEST_SLOT, 1, DELAY_IN_MINUTES, " Czas jeszcze nie nadszedł. Wróć za "));
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_składniki"),
-					new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)
-				),
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_składniki"),
+						new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)),
 				ConversationStates.ATTENDING,
 				"Witaj ponownie, śmiałku. Nadszedł czas na kolejną próbę. Muszę zdobyć materiały do stworzenia amuletu kontroli smoków. Pomożesz mi?",
 				new SetQuestAction(QUEST_SLOT, "dwuglowyzielonysmok?"));
 
-		Map<String, Pair<Integer, Integer>> toKill = Map.of("dwugłowy zielony smok", new Pair<>(1, 0));
-		List<ChatAction> actions = List.of(
-			new SetQuestAction(QUEST_SLOT, 0, "dwuglowyzielonysmok"),
-			new StartRecordingKillsAction(QUEST_SLOT, 1, toKill)
-		);
+		Map<String, Pair<Integer, Integer>> toKill = Collections.singletonMap("dwugłowy zielony smok",
+				new Pair<>(1, 0));
+		List<ChatAction> actions = Arrays.asList(new SetQuestAction(QUEST_SLOT, 0, "dwuglowyzielonysmok"),
+				new StartRecordingKillsAction(QUEST_SLOT, 1, toKill));
 
 		npc.add(ConversationStates.ATTENDING, HELP_MESSAGES,
-				new QuestInStateCondition(QUEST_SLOT, "dwuglowyzielonysmok?"),
-				ConversationStates.ATTENDING,
+				new QuestInStateCondition(QUEST_SLOT, "dwuglowyzielonysmok?"), ConversationStates.ATTENDING,
 				"Twa odwaga jest godna podziwu, a czy idzie ona w patrze z honorem? Poskrom proszę dwugłowego zielonego smoka oraz przynieść mi pięć skór w dowód jego pokonania.",
 				new MultipleActions(actions));
 	}
 
 	private void step3() {
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "dwuglowyzielonysmok"),
-					new NotCondition(new KilledForQuestCondition(QUEST_SLOT, 1))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "dwuglowyzielonysmok"),
+						new NotCondition(new KilledForQuestCondition(QUEST_SLOT, 1))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
 					raiser.say("Czyżby dwugłowy zielony smok przerósł twoją odwagę? Nie cofaj się w tej chwili próby!");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "dwuglowyzielonysmok"),
-					new KilledForQuestCondition(QUEST_SLOT, 1),
-					new NotCondition(new PlayerHasItemWithHimCondition("skóra zielonego smoka", 5))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say(player.getGenderVerb("Pokonałeś") + " smoka, lecz potrzebuję pięciu skór zielonego smoka. Przynieś je, bym mogła kontynuować swe dzieło.");
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "dwuglowyzielonysmok"),
+						new KilledForQuestCondition(QUEST_SLOT, 1),
+						new NotCondition(new PlayerHasItemWithHimCondition("skóra zielonego smoka", 5))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say(player.getGenderVerb("Pokonałeś")
+							+ " smoka, lecz potrzebuję pięciu skór zielonego smoka. Przynieś je, bym mogła kontynuować swe dzieło.");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "dwuglowyzielonysmok"),
-					new KilledForQuestCondition(QUEST_SLOT, 1),
-					new PlayerHasItemWithHimCondition("skóra zielonego smoka", 5)
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "dwuglowyzielonysmok"),
+						new KilledForQuestCondition(QUEST_SLOT, 1),
+						new PlayerHasItemWithHimCondition("skóra zielonego smoka", 5)),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
 					raiser.say("Twoja determinacja godna jest pochwały! Wróć za godzinę, a dam ci nowe wyzwanie.");
-					giveRewards(player, Map.of("skóra zielonego smoka", 5), 7500, 20);
+					giveRewards(player, Collections.singletonMap("skóra zielonego smoka", 5), 7500, 20);
 					player.setQuest(QUEST_SLOT, "czas_kiel;" + System.currentTimeMillis());
 				});
 	}
@@ -209,18 +179,14 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		questTrigger.add(extraTrigger);
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_kiel"),
-					new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))
-				),
-				ConversationStates.ATTENDING, null,
-				new SayTimeRemainingAction(QUEST_SLOT, 1, DELAY_IN_MINUTES, " Jeszcze trochę cierpliwości, powróć za "));
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_kiel"),
+						new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))),
+				ConversationStates.ATTENDING, null, new SayTimeRemainingAction(QUEST_SLOT, 1, DELAY_IN_MINUTES,
+						" Jeszcze trochę cierpliwości, powróć za "));
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_kiel"),
-					new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)
-				),
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_kiel"),
+						new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)),
 				ConversationStates.ATTENDING,
 				"Ach, cieszę się, że jesteś znowu tutaj! Potrzebuję teraz kłów smoków, by zakończyć pewien magiczny rytuał. Przynieś ich pięćdziesiąt!",
 				new SetQuestAction(QUEST_SLOT, "kielsmoka"));
@@ -228,24 +194,19 @@ public class ProsbyWiedzmy extends AbstractQuest {
 
 	private void step4() {
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "kielsmoka"),
-					new NotCondition(new PlayerHasItemWithHimCondition("kieł smoka", 50))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "kielsmoka"),
+						new NotCondition(new PlayerHasItemWithHimCondition("kieł smoka", 50))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
 					raiser.say("Nie mam jeszcze wszystkich kłów smoka, a czas nagli. Przyspiesz swe działania!");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "kielsmoka"),
-					new PlayerHasItemWithHimCondition("kieł smoka", 50)
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Znakomicie! Teraz mogę kontynuować swój rytuał. Wróć za godzinę, a dowiesz się, co dalej.");
-					giveRewards(player, Map.of("kieł smoka", 50), 10000, 20);
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "kielsmoka"),
+						new PlayerHasItemWithHimCondition("kieł smoka", 50)),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say(
+							"Znakomicie! Teraz mogę kontynuować swój rytuał. Wróć za godzinę, a dowiesz się, co dalej.");
+					giveRewards(player, Collections.singletonMap("kieł smoka", 50), 10000, 20);
 					player.setQuest(QUEST_SLOT, "czas_czarnysmok;" + System.currentTimeMillis());
 				});
 	}
@@ -256,78 +217,61 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		questTrigger.add(extraTrigger);
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_czarnysmok"),
-					new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))
-				),
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_czarnysmok"),
+						new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))),
 				ConversationStates.ATTENDING, null,
 				new SayTimeRemainingAction(QUEST_SLOT, 1, DELAY_IN_MINUTES, " Jeszcze czas nie nadszedł. Wróć za "));
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_czarnysmok"),
-					new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)
-				),
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_czarnysmok"),
+						new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)),
 				ConversationStates.ATTENDING,
 				"Dobrze więc, smocze kły nieco pomogły podczas odprawienia rytuału. Jednak potrzebuję czegoś więcej. Pomożesz?",
 				new SetQuestAction(QUEST_SLOT, "dużesmoki?"));
 
-		Map<String, Pair<Integer, Integer>> toKill = Map.of(
-				"czarne smoczysko", new Pair<>(1, 0),
-				"smok arktyczny", new Pair<>(1, 0)
-			);
-		List<ChatAction> actions = List.of(
-			new SetQuestAction(QUEST_SLOT, 0, "czarnesmoczysko"),
-			new StartRecordingKillsAction(QUEST_SLOT, 1, toKill)
-		);
+		Map<String, Pair<Integer, Integer>> toKill = new LinkedHashMap<String, Pair<Integer, Integer>>();
+		toKill.put("czarne smoczysko", new Pair<>(1, 0));
+		toKill.put("smok arktyczny", new Pair<>(1, 0));
+		List<ChatAction> actions = Arrays.asList(new SetQuestAction(QUEST_SLOT, 0, "czarnesmoczysko"),
+				new StartRecordingKillsAction(QUEST_SLOT, 1, toKill));
 
-		npc.add(ConversationStates.ATTENDING, HELP_MESSAGES,
-				new QuestInStateCondition(QUEST_SLOT, "dużesmoki?"),
+		npc.add(ConversationStates.ATTENDING, HELP_MESSAGES, new QuestInStateCondition(QUEST_SLOT, "dużesmoki?"),
 				ConversationStates.ATTENDING,
 				"Dobrze. Niestety wykonany rytuał, aby wzmocnić amulet nie podziałał na #'czarne smoczysko' oraz #'smoka arktycznego'."
-					+ " Pokonaj te oba przerośnięte gady oraz przynieś jeszcze po #'3 skóry czarnego smoka' i #'3 skóry arktycznego smoka'.",
+						+ " Pokonaj te oba przerośnięte gady oraz przynieś jeszcze po #'3 skóry czarnego smoka' i #'3 skóry arktycznego smoka'.",
 				new MultipleActions(actions));
 	}
 
 	private void step5() {
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "czarnesmoczysko"),
-					new NotCondition(new KilledForQuestCondition(QUEST_SLOT, 1))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "czarnesmoczysko"),
+						new NotCondition(new KilledForQuestCondition(QUEST_SLOT, 1))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
 					raiser.say("Nie podjąłeś jeszcze starcia z czarnym smoczyskiem i smokiem arktycznym? Odwagi!");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "czarnesmoczysko"),
-					new KilledForQuestCondition(QUEST_SLOT, 1),
-					new NotCondition(new AndCondition(
-						new PlayerHasItemWithHimCondition("skóra czarnego smoka", 3),
-						new PlayerHasItemWithHimCondition("skóra arktycznego smoka", 3)
-					))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Choć " + player.getGenderVerb("pokonałeś") + " smoki, ale brakuje mi jeszcze odpowiednich skór. Przynieś trzy skóry czarnego i arktycznego smoka.");
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "czarnesmoczysko"),
+						new KilledForQuestCondition(QUEST_SLOT, 1),
+						new NotCondition(new AndCondition(new PlayerHasItemWithHimCondition("skóra czarnego smoka", 3),
+								new PlayerHasItemWithHimCondition("skóra arktycznego smoka", 3)))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say("Choć " + player.getGenderVerb("pokonałeś")
+							+ " smoki, ale brakuje mi jeszcze odpowiednich skór. Przynieś trzy skóry czarnego i arktycznego smoka.");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "czarnesmoczysko"),
-					new KilledForQuestCondition(QUEST_SLOT, 1),
-					new PlayerHasItemWithHimCondition("skóra czarnego smoka", 3),
-					new PlayerHasItemWithHimCondition("skóra arktycznego smoka", 3)
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Znakomicie! Dzięki tobie mogę dalej kontynuować. Wróć za godzinę, a dowiesz się, co dalej.");
-					giveRewards(player, Map.of(
-						"skóra czarnego smoka", 3,
-						"skóra arktycznego smoka", 3
-					), 12500, 20);
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "czarnesmoczysko"),
+						new KilledForQuestCondition(QUEST_SLOT, 1),
+						new PlayerHasItemWithHimCondition("skóra czarnego smoka", 3),
+						new PlayerHasItemWithHimCondition("skóra arktycznego smoka", 3)),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say(
+							"Znakomicie! Dzięki tobie mogę dalej kontynuować. Wróć za godzinę, a dowiesz się, co dalej.");
+					Map<String, Integer> rewards = new LinkedHashMap<String, Integer>();
+					rewards.put("skóra czarnego smoka", 3);
+					rewards.put("skóra arktycznego smoka", 3);
+					giveRewards(player, rewards, 12500, 20);
 					player.setQuest(QUEST_SLOT, "czas_krewsmoka;" + System.currentTimeMillis());
 				});
 	}
@@ -338,24 +282,19 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		questTrigger.add(extraTrigger);
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_krewsmoka"),
-					new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))
-				),
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_krewsmoka"),
+						new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))),
 				ConversationStates.ATTENDING, null,
 				new SayTimeRemainingAction(QUEST_SLOT, 1, DELAY_IN_MINUTES, " Nie przeszkadzaj mi teraz, powróć za "));
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_krewsmoka"),
-					new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)
-				),
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_krewsmoka"),
+						new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)),
 				ConversationStates.ATTENDING,
 				"Smoki to potężne istoty, a ich moc jest trudna do ujarzmienia. Aby udoskonalić mój amulet, potrzebuję pomocy. Czy podejmiesz się tego zadania?",
 				new SetQuestAction(QUEST_SLOT, "krew?"));
 
-		npc.add(ConversationStates.ATTENDING, HELP_MESSAGES,
-				new QuestInStateCondition(QUEST_SLOT, "krew?"),
+		npc.add(ConversationStates.ATTENDING, HELP_MESSAGES, new QuestInStateCondition(QUEST_SLOT, "krew?"),
 				ConversationStates.ATTENDING,
 				"Twoja odwaga jest godna podziwu. Przynieś mi 30 fiolek z krwią smoków, abym mogła wzmocnić amulet i zabezpieczyć się przed ich gniewem.",
 				new SetQuestAction(QUEST_SLOT, 0, "krewsmoka"));
@@ -363,26 +302,19 @@ public class ProsbyWiedzmy extends AbstractQuest {
 
 	private void step6() {
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "krewsmoka"),
-					new NotCondition(new AndCondition(
-						new PlayerHasItemWithHimCondition("smocza krew", 30)
-					))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Smocza krew jest kluczem do ujarzmienia ich mocy. Przynieś ją, abyśmy mogli uczynić amulet niezwyciężonym.");
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "krewsmoka"),
+						new NotCondition(new AndCondition(new PlayerHasItemWithHimCondition("smocza krew", 30)))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say(
+							"Smocza krew jest kluczem do ujarzmienia ich mocy. Przynieś ją, abyśmy mogli uczynić amulet niezwyciężonym.");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "krewsmoka"),
-					new PlayerHasItemWithHimCondition("smocza krew", 30)
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "krewsmoka"),
+						new PlayerHasItemWithHimCondition("smocza krew", 30)),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
 					raiser.say("Twoja pomoc jest bezcenna. Wróć za godzinę, a zdradzę ci, co musimy uczynić dalej.");
-					giveRewards(player, Map.of("smocza krew", 30), 15000, 20);
+					giveRewards(player, Collections.singletonMap("smocza krew", 30), 15000, 20);
 					player.setQuest(QUEST_SLOT, "czas_glodna;" + System.currentTimeMillis());
 				});
 	}
@@ -393,62 +325,49 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		questTrigger.add(extraTrigger);
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_glodna"),
-					new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))
-				),
-				ConversationStates.ATTENDING, null,
-				new SayTimeRemainingAction(QUEST_SLOT, 1, DELAY_IN_MINUTES, " Nie przeszkadzaj mi w tym momencie. Powróć za "));
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_glodna"),
+						new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))),
+				ConversationStates.ATTENDING, null, new SayTimeRemainingAction(QUEST_SLOT, 1, DELAY_IN_MINUTES,
+						" Nie przeszkadzaj mi w tym momencie. Powróć za "));
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_glodna"),
-					new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)
-				),
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_glodna"),
+						new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)),
 				ConversationStates.ATTENDING,
 				"Czuję, że czas wielkiego rytuału zbliża się, lecz nie mogę działać o pustym żołądku. Pomożesz mi zdobyć zapasy, abym miała siłę na dalsze przygotowania?",
 				new SetQuestAction(QUEST_SLOT, "glodna?"));
 
-		npc.add(ConversationStates.ATTENDING, HELP_MESSAGES,
-				new QuestInStateCondition(QUEST_SLOT, "glodna?"),
+		npc.add(ConversationStates.ATTENDING, HELP_MESSAGES, new QuestInStateCondition(QUEST_SLOT, "glodna?"),
 				ConversationStates.ATTENDING,
 				"Przynieś mi 100 kawałków mięsa, 40 bochenków chleba, 40 kawałków sera oraz 20 bukłaków z wodą. To da mi siłę na kolejne wyzwania.",
 				new SetQuestAction(QUEST_SLOT, 0, "glodna"));
 	}
 
 	private void step7() {
-		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "glodna"),
-					new NotCondition(new AndCondition(
-						new PlayerHasItemWithHimCondition("mięso", 100),
-						new PlayerHasItemWithHimCondition("chleb", 40),
-						new PlayerHasItemWithHimCondition("ser", 40),
-						new PlayerHasItemWithHimCondition("bukłak z wodą", 20)
-					))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Nie " + player.getGenderVerb("przyniosłeś") + " jeszcze zapasów, których potrzebuję. Bez nich nie dokończę przygotowań.");
+		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES, new AndCondition(
+				new QuestInStateCondition(QUEST_SLOT, 0, "glodna"),
+				new NotCondition(new AndCondition(new PlayerHasItemWithHimCondition("mięso", 100),
+						new PlayerHasItemWithHimCondition("chleb", 40), new PlayerHasItemWithHimCondition("ser", 40),
+						new PlayerHasItemWithHimCondition("bukłak z wodą", 20)))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say("Nie " + player.getGenderVerb("przyniosłeś")
+							+ " jeszcze zapasów, których potrzebuję. Bez nich nie dokończę przygotowań.");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "glodna"),
-					new PlayerHasItemWithHimCondition("mięso", 100),
-					new PlayerHasItemWithHimCondition("chleb", 40),
-					new PlayerHasItemWithHimCondition("ser", 40),
-					new PlayerHasItemWithHimCondition("bukłak z wodą", 20)
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Wspaniale! Teraz mogę skupić się na naszym celu. Wróć za godzinę, a dam ci nowe zadanie.");
-					giveRewards(player, Map.of(
-						"mięso", 100,
-						"chleb", 40,
-						"ser", 40,
-						"bukłak z wodą", 20
-					), 20000, 40);
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "glodna"),
+						new PlayerHasItemWithHimCondition("mięso", 100), new PlayerHasItemWithHimCondition("chleb", 40),
+						new PlayerHasItemWithHimCondition("ser", 40),
+						new PlayerHasItemWithHimCondition("bukłak z wodą", 20)),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say(
+							"Wspaniale! Teraz mogę skupić się na naszym celu. Wróć za godzinę, a dam ci nowe zadanie.");
+					Map<String, Integer> rewards = new LinkedHashMap<String, Integer>();
+					rewards.put("mięso", 100);
+					rewards.put("chleb", 40);
+					rewards.put("ser", 40);
+					rewards.put("bukłak z wodą", 20);
+					giveRewards(player, rewards, 20000, 40);
 					player.setQuest(QUEST_SLOT, "czas_ostatnie;" + System.currentTimeMillis());
 				});
 	}
@@ -459,38 +378,30 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		questTrigger.add(extraTrigger);
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_ostatnie"),
-					new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))
-				),
-				ConversationStates.ATTENDING, null,
-				new SayTimeRemainingAction(QUEST_SLOT, 1, DELAY_IN_MINUTES, " Jeszcze nie minęła godzina. Wróć proszę za "));
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_ostatnie"),
+						new NotCondition(new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES))),
+				ConversationStates.ATTENDING, null, new SayTimeRemainingAction(QUEST_SLOT, 1, DELAY_IN_MINUTES,
+						" Jeszcze nie minęła godzina. Wróć proszę za "));
 
 		npc.add(ConversationStates.ATTENDING, questTrigger,
-				new AndCondition(
-					new QuestStateStartsWithCondition(QUEST_SLOT, "czas_ostatnie"),
-					new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)
-				),
+				new AndCondition(new QuestStateStartsWithCondition(QUEST_SLOT, "czas_ostatnie"),
+						new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES)),
 				ConversationStates.ATTENDING,
 				"Już prawie mój amulet jest ukończony, lecz potrzebuję twojej pomocy, by dokończyć dzieła. Podejmiesz wyzwanie?",
 				new SetQuestAction(QUEST_SLOT, "ostatnie?"));
 
-		//kogo ma zabic w nastepnym kroku
-		final Map<String, Pair<Integer, Integer>> toKill = Map.of(
-			"czerwony smok", new Pair<>(1, 0),
-			"zielony smok", new Pair<>(1, 0),
-			"dwugłowy czerwony smok", new Pair<>(1, 0),
-			"dwugłowy czarny smok", new Pair<>(1, 0),
-			"dwugłowy niebieski smok", new Pair<>(1, 0),
-			"złoty smok", new Pair<>(1, 0)
-		);
-		final List<ChatAction> actions = List.of(
-			new SetQuestAction(QUEST_SLOT, 0, "ostatnie"),
-			new StartRecordingKillsAction(QUEST_SLOT, 1, toKill)
-		);
+		// kogo ma zabic w nastepnym kroku
+		final Map<String, Pair<Integer, Integer>> toKill = new LinkedHashMap<String, Pair<Integer, Integer>>();
+		toKill.put("czerwony smok", new Pair<>(1, 0));
+		toKill.put("zielony smok", new Pair<>(1, 0));
+		toKill.put("dwugłowy czerwony smok", new Pair<>(1, 0));
+		toKill.put("dwugłowy czarny smok", new Pair<>(1, 0));
+		toKill.put("dwugłowy niebieski smok", new Pair<>(1, 0));
+		toKill.put("złoty smok", new Pair<>(1, 0));
+		final List<ChatAction> actions = Arrays.asList(new SetQuestAction(QUEST_SLOT, 0, "ostatnie"),
+				new StartRecordingKillsAction(QUEST_SLOT, 1, toKill));
 
-		npc.add(ConversationStates.ATTENDING, HELP_MESSAGES,
-				new QuestInStateCondition(QUEST_SLOT, "ostatnie?"),
+		npc.add(ConversationStates.ATTENDING, HELP_MESSAGES, new QuestInStateCondition(QUEST_SLOT, "ostatnie?"),
 				ConversationStates.ATTENDING,
 				"Musisz pokonać najpotężniejsze smoki tego świata: dwugłowy czarny smok, dwugłowy czerwony smok, dwugłowy niebieski smok, czerwony smok, zielony smok oraz złoty smok. Przynieś po 10 skór każdego z nich, abyśmy mogli zakończyć dzieło!",
 				new MultipleActions(actions));
@@ -498,52 +409,44 @@ public class ProsbyWiedzmy extends AbstractQuest {
 
 	private void step8() {
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "ostatnie"),
-					new NotCondition(new KilledForQuestCondition(QUEST_SLOT, 1))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Nie " + player.getGenderVerb("pokonałeś") + " jeszcze smoków. Musisz działać szybko, aby udowodnić swą wartość!");
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "ostatnie"),
+						new NotCondition(new KilledForQuestCondition(QUEST_SLOT, 1))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say("Nie " + player.getGenderVerb("pokonałeś")
+							+ " jeszcze smoków. Musisz działać szybko, aby udowodnić swą wartość!");
 				});
 
 		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "ostatnie"),
-					new KilledForQuestCondition(QUEST_SLOT, 1),
-					new NotCondition(new AndCondition(
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "ostatnie"),
+						new KilledForQuestCondition(QUEST_SLOT, 1),
+						new NotCondition(new AndCondition(new PlayerHasItemWithHimCondition("skóra złotego smoka", 10),
+								new PlayerHasItemWithHimCondition("skóra czarnego smoka", 10),
+								new PlayerHasItemWithHimCondition("skóra czerwonego smoka", 10),
+								new PlayerHasItemWithHimCondition("skóra zielonego smoka", 10),
+								new PlayerHasItemWithHimCondition("skóra niebieskiego smoka", 10)))),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say("Choć " + player.getGenderVerb("pokonałeś")
+							+ " smoki, brakuje mi jeszcze ich skór. Przynieś po 10 skór każdego rodzaju, abyśmy mogli zakończyć nasz rytuał.");
+				});
+
+		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
+				new AndCondition(new QuestInStateCondition(QUEST_SLOT, 0, "ostatnie"),
+						new KilledForQuestCondition(QUEST_SLOT, 1),
 						new PlayerHasItemWithHimCondition("skóra złotego smoka", 10),
 						new PlayerHasItemWithHimCondition("skóra czarnego smoka", 10),
 						new PlayerHasItemWithHimCondition("skóra czerwonego smoka", 10),
 						new PlayerHasItemWithHimCondition("skóra zielonego smoka", 10),
-						new PlayerHasItemWithHimCondition("skóra niebieskiego smoka", 10)
-					))
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Choć " + player.getGenderVerb("pokonałeś") + " smoki, brakuje mi jeszcze ich skór. Przynieś po 10 skór każdego rodzaju, abyśmy mogli zakończyć nasz rytuał.");
-				});
-
-		npc.add(ConversationStates.IDLE, ConversationPhrases.GREETING_MESSAGES,
-				new AndCondition(
-					new QuestInStateCondition(QUEST_SLOT, 0, "ostatnie"),
-					new KilledForQuestCondition(QUEST_SLOT, 1),
-					new PlayerHasItemWithHimCondition("skóra złotego smoka", 10),
-					new PlayerHasItemWithHimCondition("skóra czarnego smoka", 10),
-					new PlayerHasItemWithHimCondition("skóra czerwonego smoka", 10),
-					new PlayerHasItemWithHimCondition("skóra zielonego smoka", 10),
-					new PlayerHasItemWithHimCondition("skóra niebieskiego smoka", 10)
-				),
-				ConversationStates.ATTENDING, null,
-				(player, sentence, raiser) -> {
-					raiser.say("Znakomicie! Teraz mogę ukończyć amulet, który ujarzmi smoki. Przyjmij tę nagrodę jako znak mojej wdzięczności i używaj jej mądrze.");
-					giveRewards(player, Map.of(
-						"skóra złotego smoka", 10,
-						"skóra czarnego smoka", 10,
-						"skóra czerwonego smoka", 10,
-						"skóra zielonego smoka", 10,
-						"skóra niebieskiego smoka", 10
-					), 35000, 100);
+						new PlayerHasItemWithHimCondition("skóra niebieskiego smoka", 10)),
+				ConversationStates.ATTENDING, null, (player, sentence, raiser) -> {
+					raiser.say(
+							"Znakomicie! Teraz mogę ukończyć amulet, który ujarzmi smoki. Przyjmij tę nagrodę jako znak mojej wdzięczności i używaj jej mądrze.");
+					Map<String, Integer> rewards = new LinkedHashMap<String, Integer>();
+					rewards.put("skóra złotego smoka", 10);
+					rewards.put("skóra czarnego smoka", 10);
+					rewards.put("skóra czerwonego smoka", 10);
+					rewards.put("skóra zielonego smoka", 10);
+					rewards.put("skóra niebieskiego smoka", 10);
+					giveRewards(player, rewards, 35000, 100);
 					final Item pazurek = SingletonRepository.getEntityManager().getItem("pazur niebieskiego smoka");
 					pazurek.setBoundTo(player.getName());
 					player.equipOrPutOnGround(pazurek);
@@ -555,10 +458,8 @@ public class ProsbyWiedzmy extends AbstractQuest {
 
 	@Override
 	public void addToWorld() {
-		fillQuestInfo(
-				"Prośby Wiedźmy",
-				"Benigna chce kontrolować wszystkie smoki swoim nowym amuletem. Czy to jest w ogólne możliwe?",
-				false);
+		fillQuestInfo("Prośby Wiedźmy",
+				"Benigna chce kontrolować wszystkie smoki swoim nowym amuletem. Czy to jest w ogólne możliwe?", false);
 
 		step1();
 		step2();
@@ -588,13 +489,15 @@ public class ProsbyWiedzmy extends AbstractQuest {
 			res.add("Nie mam ochoty wykonywać próśb czarownicy - Benigny.");
 			return res;
 		}
-		res.add("Pierwsza prośba Benigny była, abym " + player.getGenderVerb("zabił") + " błękitnego smoka, który znajduje się gdzieś w okolicy jej chatki.");
+		res.add("Pierwsza prośba Benigny była, abym " + player.getGenderVerb("zabił")
+				+ " błękitnego smoka, który znajduje się gdzieś w okolicy jej chatki.");
 		if (questState.startsWith("start")) {
 			return res;
 		}
-		res.add(player.getGenderVerb("Zabiłem") + " błękitnego smoka i " + player.getGenderVerb("zaniosłem") + " Benignie jego skórę w dowód, że pokonałem go samodzielnie!");
+		res.add(player.getGenderVerb("Zabiłem") + " błękitnego smoka i " + player.getGenderVerb("zaniosłem")
+				+ " Benignie jego skórę w dowód, że pokonałem go samodzielnie!");
 		if (questState.startsWith("czas_składniki")) {
-			if (new TimePassedCondition(QUEST_SLOT,1,DELAY_IN_MINUTES).fire(player, null, null)) {
+			if (new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES).fire(player, null, null)) {
 				res.add("Mam ponownie odwiedzić Benigne, aby dała mi kolejne zlecenie. Hasło: składniki");
 			} else {
 				res.add("Mam wrócić za " + DELAY_IN_MINUTES + " minut. Hasło: składniki");
@@ -609,9 +512,10 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		if (questState.startsWith("dwuglowyzielonysmok")) {
 			return res;
 		}
-		res.add(player.getGenderVerb("Zabiłem") + " dwugłowego zielonego smoka i " + player.getGenderVerb("zaniosłem") + " Benignie potrzebne jej skóry!");
+		res.add(player.getGenderVerb("Zabiłem") + " dwugłowego zielonego smoka i " + player.getGenderVerb("zaniosłem")
+				+ " Benignie potrzebne jej skóry!");
 		if (questState.startsWith("czas_kiel")) {
-			if (new TimePassedCondition(QUEST_SLOT,1,DELAY_IN_MINUTES).fire(player, null, null)) {
+			if (new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES).fire(player, null, null)) {
 				res.add("Mam ponownie odwiedzić Benigne, aby dała mi kolejne zlecenie. Hasło: smok");
 			} else {
 				res.add("Mam wrócić za " + DELAY_IN_MINUTES + " minut. Hasło: smok");
@@ -628,7 +532,7 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		}
 		res.add(player.getGenderVerb("Zaniosłem") + " potrzebne Benignie kły smoków!");
 		if (questState.startsWith("czas_czarnysmok")) {
-			if (new TimePassedCondition(QUEST_SLOT,1,DELAY_IN_MINUTES).fire(player, null, null)) {
+			if (new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES).fire(player, null, null)) {
 				res.add("Mam ponownie odwiedzić Benigne, aby dała mi kolejne zlecenie. Hasło: kieł smoka");
 			} else {
 				res.add("Mam wrócić za " + DELAY_IN_MINUTES + " minut. Hasło: kieł smoka");
@@ -639,13 +543,15 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		if ("dużesmoki?".equals(questState)) {
 			return res;
 		}
-		res.add("Benigna poprosiła mnie, abym " + player.getGenderVerb("zabił") + " czarne smoczysko i smoka arktycznego. Chciała również 3 skóry czarnego smoka oraz 3 skóry arktycznego smoka.");
+		res.add("Benigna poprosiła mnie, abym " + player.getGenderVerb("zabił")
+				+ " czarne smoczysko i smoka arktycznego. Chciała również 3 skóry czarnego smoka oraz 3 skóry arktycznego smoka.");
 		if (questState.startsWith("czarnesmoczysko")) {
 			return res;
 		}
-		res.add(player.getGenderVerb("Zabiłem") + " czarne smoczysko i smoka arktycznego oraz " + player.getGenderVerb("zaniosłem") + " jej potrzebne materiały!");
+		res.add(player.getGenderVerb("Zabiłem") + " czarne smoczysko i smoka arktycznego oraz "
+				+ player.getGenderVerb("zaniosłem") + " jej potrzebne materiały!");
 		if (questState.startsWith("czas_krewsmoka")) {
-			if (new TimePassedCondition(QUEST_SLOT,1,DELAY_IN_MINUTES).fire(player, null, null)) {
+			if (new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES).fire(player, null, null)) {
 				res.add("Mam ponownie odwiedzić Benigne, aby dała mi kolejne zlecenie. Hasło: duże smoki");
 			} else {
 				res.add("Mam wrócić za " + DELAY_IN_MINUTES + " minut. Hasło: duże smoki");
@@ -662,7 +568,7 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		}
 		res.add(player.getGenderVerb("Zaniosłem") + " potrzebną krew smoka Benignie!");
 		if (questState.startsWith("czas_glodna")) {
-			if (new TimePassedCondition(QUEST_SLOT,1,DELAY_IN_MINUTES).fire(player, null, null)) {
+			if (new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES).fire(player, null, null)) {
 				res.add("Mam ponownie odwiedzić Benigne, aby dała mi kolejne zlecenie. Hasło: krew");
 			} else {
 				res.add("Mam wrócić za " + DELAY_IN_MINUTES + " minut. Hasło: krew");
@@ -679,7 +585,7 @@ public class ProsbyWiedzmy extends AbstractQuest {
 		}
 		res.add(player.getGenderVerb("Przyniosłem") + " jedzenie dla Benigny tak jak mnie o to prosiła.");
 		if (questState.startsWith("czas_ostatnie")) {
-			if (new TimePassedCondition(QUEST_SLOT,1,DELAY_IN_MINUTES).fire(player, null, null)) {
+			if (new TimePassedCondition(QUEST_SLOT, 1, DELAY_IN_MINUTES).fire(player, null, null)) {
 				res.add("Mam ponownie odwiedzić Benigne, aby dała mi kolejne zlecenie. Hasło: jedzenie");
 			} else {
 				res.add("Mam wrócić za " + DELAY_IN_MINUTES + " minut. Hasło: jedzenie");
@@ -691,8 +597,8 @@ public class ProsbyWiedzmy extends AbstractQuest {
 			return res;
 		}
 		res.add("Benigna dała mi swoje ostatnie zadanie. Mam zabić resztę smoków, o które prosi oraz przynieść mi ich skóry. "
-		+ "Dokładnie mam zabić: dwugłowy czarny smok, dwugłowy czerwony smok, dwugłowy niebieski smok, czerwony smok, zielony smok oraz złoty smok."
-		+ "Mam przynieść: 10 skór czarnego, czerwonego, niebieskiego, zielonego oraz złotego smoka.");
+				+ "Dokładnie mam zabić: dwugłowy czarny smok, dwugłowy czerwony smok, dwugłowy niebieski smok, czerwony smok, zielony smok oraz złoty smok."
+				+ "Mam przynieść: 10 skór czarnego, czerwonego, niebieskiego, zielonego oraz złotego smoka.");
 		if (questState.startsWith("ostatnie")) {
 			return res;
 		}
@@ -701,7 +607,8 @@ public class ProsbyWiedzmy extends AbstractQuest {
 			return res;
 		}
 
-		// if things have gone wrong and the quest state didn't match any of the above, debug a bit:
+		// if things have gone wrong and the quest state didn't match any of the above,
+		// debug a bit:
 		final List<String> debug = new ArrayList<String>();
 		debug.add("Stan zadania to: " + questState);
 		logger.error("Historia nie pasuje do stanu poszukiwania " + questState);
